web/src/styles/components/_card-profile.scss
$avatar-container-max-height: 150px;
$avatar-container-max-width: 150px;
$avatar-width: 68px;
$avatar-margin: $padding-big;

.card-profile__data {
  font-size: $font-size-general;
  height: auto;
  display: flex;
  flex-direction: column;
}

.card-profile__name {

  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin-right: $margin-xsmall;

}

.card-profile__description {
  font-size: $font-size-general;
  font-weight: $font-weight-regular;
  margin: $margin-small 0;
  margin-top: $margin-xsmall;

  color: $color-gray;

}

.card-profile__description:empty{
  margin:0;
}


.card-profile__tags {

  padding-top: $padding-small;

}

.card-profile__rating {
  display: flex;
  width: auto;
  height: auto;
  margin-left: 0;
  background-size: contain;
  margin: $margin-small auto;
  margin-bottom: 0;
  padding: 0;
  font-weight: $font-weight-bold;
  border-top: $border-style-basic;
  border-bottom: $border-style-basic;
  gap: $padding-small;
  overflow: auto;

  & svg {
    width: 1rem;
    
  }
}

.card-profile__rate {

  display: flex;
  justify-content: center;
  align-items: center;
  padding: $padding-medium;

}

.card-profile__rate--published {

  background-color: $color-ligth-gray;
  
}

.card-profile__rate-label {

  color: $color-gray;
  font-weight: $font-weight-light;
  font-size: $font-size-small;
  padding-right: $padding-medium;
}

.card-profile__icon {

  justify-content: center;
  align-items: center;

}

.card-profile__location {
  color: $color-gray;
  text-align: center;
  font-size: font-size-medium;
  .icon {
    width: 25px;
    height: 25px;
    fill: $color-gray;
  }
}

.card-profile__interests {
  font-size: font-size-medium;
  margin-right: 5px;
  color: $color-gray;
}

.card-profile__toggle-button {
  background-color: transparent;
  border: 2px solid $color-corporative;
  width: 150px;
  height: 150px;
  display: flex;
  align-items: center;
  justify-content: center;
  .icon {
    width: 50%;
    height: 50%;
    fill: $color-corporative;
  }
  & svg {
    position: initial;
    fill: $color-corporative;
  }
  &--corporative-bg {
    background-color: $color-corporative;
    .icon {
      fill: $color-black;
    }
  }
}

.card-profile__container {

  display: flex;
  height: auto;
  width: 100%;
  flex-direction: column;
  flex: 1;
  background-color: $color-white;
  border-radius: 0;
  padding: $padding-big;
  margin-bottom: $footer-height-mobile;

}

.card-profile__content {
  display: flex;
  flex-direction: column;
  bottom: 0;


}

.card-profile__actions{
  justify-content: flex-start;
  display: flex;
  flex-direction: row;
  position: relative;
  flex: auto;
  overflow: auto;

  & a {
    width: max-content;
  }
}

.card-profile__avatar-container {
  left: 0;
  position: relative;
  margin: 0;
  margin-right: $avatar-margin;
  max-width: $avatar-container-max-width;
  min-width: $avatar-width;
}

.card-profile__avatar-container--img {
  height: auto;
  width: auto;
  object-fit: scale-down;
}

.card-profile__avatar-container--icon {
  object-fit: scale-down;
}

.card-profile__avatar-container--name {
  word-wrap: break-word;
  font-size: $font-size-medium;
  color: $color-black;
  text-align: center;
  font-weight: $font-weight-bold;
  margin: $margin-small;
}

//revise
.card-profile__container-avatar-content {
  display: flex;
  position: relative;
  align-items: flex-start;
}

.card-profile__avatar-container-name {
  font-size: $font-size-title;
  font-weight: $font-weight-bold;
  color: $color-black;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  text-overflow: ellipsis;
  max-width: 200px;
  }

.card-profile__username {
  font-size: $font-size-small;
  font-weight: $font-weight-light;
  color: $color-gray;
  position: relative;

  &::before {

    content: "@";

  }

}

.grid-one__column-mid-element {
  font-size: font-size-medium;
  font-weight: lighter;
  margin-bottom: 0.5rem;
}

.card-profile__button-list {

  display: flex;
  flex-direction: column;
  margin-top: $margin-small;
  gap: $margin-xsmall;


}

.card-profile__icon {
  svg {

    height: 20px;

  }

}

.card-profile__submenu {

  .card-button__submenu {

    margin-top: 0;
    padding-top: 0;
    padding-right: 0;
    right: 0;
    position: absolute;
    

  }

  .card-button__dropdown-container {

    top: 2rem;

  }

}

.card-profile__role {
  padding-top: $padding-medium;
  display: flex;
  flex-direction: row;

 }

@media #{$breakpoints-medium} {

  .card-profile__avatar-container-name {
    flex-direction: row;
    max-width: 300px;

  }

  .card-profile__description {

    margin-top: $margin-small;

  }

}


@media #{$breakpoints-xlarge} {


  .card-profile__container {
    // display: flex;
    // height: auto;
    // flex-direction: column;
    // flex: 1;
    // background-color: $color-white;
    // border-radius: $border-radius-circle;
    // padding: $padding-big;
    padding: $padding-medium;
    display: flex;
    flex-flow: column nowrap;
    height: 100%;
    width: 100%;
    min-width: $grid-max-width;
    margin-bottom: 0;
    padding-bottom: $padding-medium;
  }

  .card-profile__rating {
    
    margin-bottom: 10px;
    & svg {
      width: 20px;

    }
  }

 .card-profile__role {
  padding-top: $padding-huge;

 }

  .card-profile__location {
    color: $color-gray;
    text-align: center;
    font-size: font-size-medium;
    .icon {
      width: 25px;
      height: 25px;
      fill: $color-gray;
    }
  }

  .card-profile__interests {
    font-size: font-size-medium;
    margin-right: 5px;
    color: $color-gray;
  }

  .card-profile__toggle-button {
    background-color: transparent;
    border: 2px solid $color-corporative;
    width: 150px;
    height: 150px;
    display: flex;
    align-items: center;
    justify-content: center;
    .icon {
      width: 50%;
      height: 50%;
      fill: $color-corporative;
    }
    & svg {
      position: initial;
      fill: $color-corporative;
    }
    &--corporative-bg {
      background-color: $color-corporative;
      .icon {
        fill: $color-black;
      }
    }
  }

  .card-profile__avatar-container {
    display: flex;
    justify-content: center;
    overflow: hidden;
    max-width: $avatar-container-max-width;
    height: 100%;
  }

  .card-profile__avatar-container--img {
    height: auto;
    width: auto;
    object-fit: scale-down;
  }

  .card-profile__avatar-container--icon {
    object-fit: scale-down;
  }

  .card-profile__avatar-container--name {
    word-wrap: break-word;
    font-size: $font-size-medium;
    color: $color-black;
    text-align: center;
    font-weight: $font-weight-bold;
    margin: $margin-small;
  }
}

